<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <!-- Main Activity -->
    <string name="main_tittle" translatable="false">Playlist maker</string>
    <string name="main_find" translatable="false">Поиск</string>
    <string name="main_library" translatable="false">Медиатека</string>
    <string name="main_settings" translatable="false">Настройки</string>

    <!-- Settings Activity -->
    <string name="settings_theme" translatable="false">Тёмная тема</string>
    <string name="settings_share" translatable="false">Поделится приложением</string>
    <string name="settings_support" translatable="false">Написать в поддержку</string>
    <string name="settings_agreement" translatable="false">Пользовательское соглашение</string>
    <!-- Строковые ресурсы для взаимодействий с кнопками в Settings Activity -->
    <string name="support_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_title" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_title" translatable="false">Поделится приложением через:</string>
    <string name="link_on_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="link_to_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="dev_email">markovtsev.stas@yandex.by</string>

    <!-- Find Activity -->
    <string name="track_name_placeholder">Название песни</string>
    <string name="artist_name_placeholder">Исполнитель</string>
    <string name="track_time_placeholder">0:00</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update_button_text">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="reset_history">Очистить историю</string>

    <!-- Track Activity -->
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="track_current_time">0:00</string>

    <!-- Favorites Screen -->
    <string name="favorites">Избранные треки</string>
    <string name="favorites_empty">Ваша медиатека пуста</string>

    <!-- Playlist Screen -->
    <string name="playlists">Плейлисты</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <!-- New Playlist Screen -->
    <string name="playlist_name_placeholder">Название*</string>
    <string name="playlist_description_placeholder">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_dialog_edit_title">Завершить редактирование плейлиста?</string>
    <string name="playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_dialog_neutral">Отмена</string>
    <string name="playlist_dialog_positive">Завершить</string>
    <string name="playlist_save">Сохранить</string>
    <string name="playlist_edit_title">Редактировать</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="playlist_edit_ok">Плейлист %1$s сохранен</string>

    <!-- Bottom Sheet -->
    <string name="bottom_sheet_title">Добавить в плейлист</string>
    <string name="bottom_sheet_successful_addition">Добавлено в плейлист %1$s</string>
    <string name="bottom_sheet_failed_addition">Трек уже добавлен в плейлист %1$s</string>

    <!-- Playlist Info Screen -->
    <string name="empty_playlist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_title">Поделится плейлистом через: </string>
    <string name="delete_dialog_title">Хотите удалить трек?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_delete_dialog_title">Хотите удалить плейлист «%1$s»?</string>
    <string name="playlist_empty_snackbar">В плейлисте %1$s нет треков</string>
</resources>