<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:navigationIcon="@drawable/ic_arrow"
        android:title="@string/main_settings"
        android:titleTextAppearance="@style/settingsToolbarTitleText" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitcher1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/settings_theme"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        android:thumbTintMode="screen"
        app:thumbTint="@color/thumbColor"
        app:trackTint="@color/trackColor"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareView"
        style="@style/settingsItemStyle"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/settings_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportView"
        style="@style/settingsItemStyle"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/settings_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreementView"
        style="@style/settingsItemStyle"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/settings_agreement" />
</LinearLayout>