<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/artworkImageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/placeholder" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingVertical="14dp">

        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/yandex_sans_display_regular"
            android:maxLines="1"
            android:text="@string/track_name_placeholder"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/yandex_sans_display_regular"
                android:maxLines="1"
                android:text="@string/artist_name_placeholder"
                android:textColor="@color/trackTextColor"
                android:textSize="11sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/trackTextColor"
                android:src="@drawable/ellipse_1" />

            <TextView
                android:id="@+id/trackTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yandex_sans_display_regular"
                android:text="@string/track_time_placeholder"
                android:textColor="@color/trackTextColor"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/trackTextColor"
        android:src="@drawable/ic_arrow_forward" />


</LinearLayout>