<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".presentation.player.ui.fragment.PlayerActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow"
        android:titleTextAppearance="@style/settingsToolbarTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/track_placeholder"
                app:layout_constraintBottom_toTopOf="@id/trackNameTextView"
                app:layout_constraintDimensionRatio="h, 1:1"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trackNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:fontFamily="@font/yandex_sans_display_regular"
                android:maxLines="1"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/artistNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/yandex_sans_display_regular"
                android:maxLines="1"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/trackNameTextView" />

            <ImageView
                android:id="@+id/playlistButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_playlist"
                app:layout_constraintBottom_toBottomOf="@id/playButton"
                app:layout_constraintEnd_toStartOf="@id/playButton"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toTopOf="@id/playButton" />

            <ImageView
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:enabled="false"
                android:src="@drawable/ic_play"
                app:layout_constraintEnd_toStartOf="@id/likeButton"
                app:layout_constraintStart_toEndOf="@id/playlistButton"
                app:layout_constraintTop_toBottomOf="@id/artistNameTextView" />

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like"
                app:layout_constraintBottom_toBottomOf="@id/playButton"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/playButton"
                app:layout_constraintTop_toTopOf="@id/playButton" />

            <TextView
                android:id="@+id/currentTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/yandex_sans_display_regular"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/playButton" />

            <TextView
                android:id="@+id/durationTextView"
                style="@style/trackInfoLeftTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:text="@string/track_duration"
                app:layout_constraintEnd_toStartOf="@id/trackTimeTextView"
                app:layout_constraintTop_toBottomOf="@id/currentTimeTextView" />

            <TextView
                android:id="@+id/trackTimeTextView"
                style="@style/trackInfoRightTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/durationTextView"
                app:layout_constraintTop_toTopOf="@id/durationTextView" />

            <TextView
                android:id="@+id/albumTextView"
                style="@style/trackInfoLeftTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/track_album"
                app:layout_constraintEnd_toStartOf="@id/trackAlbumTextView"
                app:layout_constraintTop_toBottomOf="@id/durationTextView" />

            <TextView
                android:id="@+id/trackAlbumTextView"
                style="@style/trackInfoRightTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/albumTextView"
                app:layout_constraintTop_toTopOf="@id/albumTextView" />

            <TextView
                android:id="@+id/yearTextView"
                style="@style/trackInfoLeftTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/track_year"
                app:layout_constraintEnd_toStartOf="@id/trackYearTextView"
                app:layout_constraintTop_toBottomOf="@id/albumTextView" />

            <TextView
                android:id="@+id/trackYearTextView"
                style="@style/trackInfoRightTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/yearTextView"
                app:layout_constraintTop_toTopOf="@id/yearTextView" />

            <TextView
                android:id="@+id/genreTextView"
                style="@style/trackInfoLeftTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/track_genre"
                app:layout_constraintEnd_toStartOf="@id/trackGenreTextView"
                app:layout_constraintTop_toBottomOf="@id/yearTextView" />

            <TextView
                android:id="@+id/trackGenreTextView"
                style="@style/trackInfoRightTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/genreTextView"
                app:layout_constraintTop_toTopOf="@id/genreTextView" />

            <TextView
                android:id="@+id/countryTextView"
                style="@style/trackInfoLeftTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="20dp"
                android:text="@string/track_country"
                app:layout_constraintEnd_toStartOf="@id/trackCountryTextView"
                app:layout_constraintTop_toBottomOf="@id/genreTextView" />

            <TextView
                android:id="@+id/trackCountryTextView"
                style="@style/trackInfoRightTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/countryTextView"
                app:layout_constraintTop_toTopOf="@id/countryTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>